Transform CommandOnShardedViewNotSupportedOnMongod into CommandNotSupportedOnView on all code paths

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.5, 7.0.21
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • v8.0, v7.0
    • QE 2024-10-28, QE 2024-11-11
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Ticket SERVER-91859 transformed CommandOnShardedViewNotSupportedOnMongod into CommandNotSupportedOnView on mongos. However, it did not cover all code paths. As the transformation occurred by comparing the result status, it doesn't catch exceptions thrown with this status code, which triggered BF-34973. The aim of this ticket is to extend the transformations when errors occur by failed assertions, as well, like as thrown in this function. 

      As a reproduction scenario, I have managed to use the attached test file with the following failpoint here: analyze_shard_key_cmd_util.cpp#L372:

      // Wait here
      if (MONGO_unlikely(runClusterAggregateFailpoint.shouldFail())) {
          runClusterAggregateFailpoint.pauseWhileSet();
      }

            Assignee:
            Victor Ghita (Inactive)
            Reporter:
            Victor Ghita (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: