SERVER-95869 Transform CommandOnShardedViewNotSupportedOnMongod into CommandNotSupportedOnView on all code paths (#28148)

GitOrigin-RevId: 2f638991214d11ee8ce06814f389c1944bb35d03